--- a/app/app.css
+++ b/app/app.css
@@ -23,3 +23,15 @@
   content: "|";
   padding-right: 0.3em;
 }
+
+.blue{
+  color: blue;
+}
+
+.green{
+  color: green;
+}
+
+.red{
+  color: red;
+}
